# lessons

./: .env.example  CLAUDE.md  alembic.ini  config.py  database.py  docker-compose.yml  index.html  main.py  models.py  package.json  pyproject.toml  style.css
alembic/: env.py
alembic/versions/: a6f73aba9642_initial.py
engine/: slides.css  slides.js
physics/fourier-transform/: index.html  slides.js
signal-processing/fourier-transform/: index.html  slides.js
